# thedig

./: .deepsource.toml  .env  .env.bak  .gitignore  .pre-commit-config.yaml  DUAL-LICENSE.md  Dockerfile  LICENSE  README.md  default.env  docker-compose.yml  dump.rdb  google-credentials-thedig.json  index.json  main.py  pyproject.toml  requirements.txt  schema.json  setup.py  setup_googlecloud.sh
.github/workflows/: deployment-trigger-prod.yml  deployment-trigger-qa.yml
LICENSES/: CC-BY-SA-4.0
api/: __init__.py
gemway/: __about__.py  __init__.py  security.py
gemway/api/: __init__.py  config.py  gem.py  logsetup.py  person.py  transmuter.py
gemway/miners/: bio.py  company.py  domainlogo.py  github.py  linkedin.py  railway.py  splitfullname.py  utils.py  vision.py  whoiscompany.py
gemway/miners/data/: jobtitles-en.json  jobtitles-fr.json  jobtitles.json
miners/: __init__.py  linkedinminer.py  whoiscompany.py
thedig/: __about__.py  security.py
thedig/api/: __init__.py  config.py  dig.py  logconfig.yml  logsetup.py  person.py  websocketmanager.py
thedig/excavators/: ISO3166.py  archaeology.py  bio.py  company.py  domainlogo.py  github.py  gravatar.py  linkedin.py  splitfullname.py  utils.py  vision.py
thedig/excavators/data/: jobtitles-en.json  jobtitles-fr.json
thedig/tests/excavators/: test_bio.py  test_gravatar.py  test_splitfullname.py  test_utils.py
transmutation/: 0  __init__.py  default.env  main.py  security.py  setup.py
transmutation/api/: __init__.py  config.py  linkedin.py  logconfig.yml  logsetup.py  person.py  tasks.py  tokenbucket.py  transmuter.py  types.py  websocketmanager.py  whoiscompany.py
transmutation/miners/: ISO3166.py  __init__.py  alchemist.py  bio.py  companylogo.py  domainlogo.py  gravatar.py  linkedin.py  linkedinminer.py  minerbase.py  splitfullname.py  utils.py  vision.py  whoiscompany.py
transmutation/utils/: proxies.txt  proxy.py  proxy.txt
